<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/NormalText"
           android:text="@string/text_destination_city"
           />

       <TextView
           android:id="@+id/text_destination_city"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/NormalText"
           android:text="Newyork"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:text="@string/text_destination"
            />

        <TextView
            android:id="@+id/text_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:text="Central Park"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:text="@string/text_start_date"
            />

        <TextView
            android:id="@+id/text_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/baseline_edit_calendar_24"
            android:text="2022/3/2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:text="@string/text_end_date"
            />



        <TextView
            android:id="@+id/text_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/baseline_edit_calendar_24"
            android:text="2022/3/23"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:text="@string/text_description"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_plans_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:textColor="@color/white"
            android:background="@color/material_dynamic_primary40"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/text_confirm"
            android:textColor="@color/white"
            android:background="@color/material_dynamic_primary40"
            />
    </LinearLayout>
</LinearLayout>