<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="0dp" android:layout_weight="0.3">

        <io.getstream.avatarview.AvatarView
            android:id="@+id/avatar_view"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:avatarViewBorderColor="@android:color/holo_blue_bright"
            app:avatarViewBorderWidth="3dp"
            app:avatarViewIndicatorSizeCriteria="9"
            app:avatarViewInitialsTextStyle="bold"
            app:avatarViewShape="circle" />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="0dp" android:layout_weight="0.7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            />

            <EditText
                android:id="@+id/text_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="123456789"
                />


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            />

            <EditText
                android:id="@+id/text_email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="123456789"
                />


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_age"
            />

            <EditText
                android:id="@+id/text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="123456789"
                />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_number"
            />


            <EditText
                android:id="@+id/text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="123456789"
                />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update_profile"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_update_profile"
        android:layout_height="wrap_content"
        />


</LinearLayout>