<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".SignInActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textSize="30sp"
        android:textColor="@color/teal_200"
        android:gravity="center_horizontal"
        />

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:strokeWidth="1dp"
                app:strokeColor="@color/teal_200"
                app:cardElevation="10dp"
                android:layout_margin="10dp"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:padding="15dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:text="Username: "
                        android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_username"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_signup_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:text="Password: "
                        android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_password"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_signup_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                         />

                </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:text="Email: "
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_signup_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/baseline_login_24"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:text="@string/signup_text" />

            </RelativeLayout>


</LinearLayout>