<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/attraction_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/text_attraction_name"
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="name" />

                <TextView
                    android:id="@+id/text_attraction_detail"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="name" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@string/text_address"
                        />
                    <TextView
                        android:id="@+id/text_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="111111"
                        android:autoLink="map"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_openning_hours_status"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        style="@style/NormalText"
                        android:text="@string/text_address"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rating"
                        style="@style/NormalText"
                        />
                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:isIndicator="true"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_contact_number"
                        style="@style/NormalText"
                        />

                    <TextView
                        android:id="@+id/text_contact_number"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:autoLink="phone"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                    <Button
                        android:id="@+id/btn_openning_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_openning_hours"
                        />

            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn_fun_facts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="Fun facts"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_hangout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Hangout" />

                <Button
                    android:id="@+id/btn_hotel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="Hotel" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_shopping"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Shopping" />

                <Button
                    android:id="@+id/btn_restaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="Restaurant" />


            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_reviews"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>